--- a/bathrobe.html
+++ b/bathrobe.html
@@ -79,10 +79,16 @@
       box-shadow:inset 0 0 0 4px rgba(255,255,255,.75), 0 1px 2px rgba(0,0,0,.12);
     }
     .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px rgba(93,163,214,.35), inset 0 0 0 4px rgba(255,255,255,.75); border-color:#5da3d6; }
-    .swatch .dot{
-      width:100%; height:100%; border-radius:999px; display:block;
-      background-size: cover; background-position:center; background-repeat:no-repeat;
-    }
+   .swatch .dot{
+  width:100%; 
+  height:100%; 
+  border-radius:999px; 
+  display:block;
+  background-position:center;
+  background-repeat:no-repeat;
+  background-size:100% 100%; /* fills the entire oval */
+}
+
 
     /* Reveal */
     .reveal{ opacity:0; transform:translateY(18px); transition:opacity 700ms ease, transform 700ms ease; }
