--- a/bathrobe.html
+++ b/bathrobe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
-  Bathrobe gallery with pinned header (black), reduced top space, and custom image ovals
+  Bathrobe gallery with pinned header (black), reduced top space, and custom image ovals (filled)
 -->
 <html lang="en">
 <head>
@@ -71,7 +71,7 @@
     .meta{ display:flex; gap:12px; flex-wrap:wrap; color:#555; margin:.3rem 0 1rem; }
     .meta .chip{ background:#f2f6fb; padding:.25rem .6rem; border-radius:20px; font-size:.9rem; letter-spacing:.02em; border:1px solid #e0edf8; }
 
-    /* ===== OVAL COLOR SWATCHES with custom images ===== */
+    /* ===== OVAL COLOR SWATCHES (use your image ovals and force-fill) ===== */
     .color-picker{ display:flex; gap:12px; align-items:center; margin:.6rem 0 1.2rem; flex-wrap:wrap; }
     .swatch{
       width:44px; height:28px; border-radius:999px; border:2px solid #cfcfcf; cursor:pointer; position:relative;
@@ -82,12 +82,12 @@
     .swatch:hover{ transform:translateY(-1px); box-shadow:0 3px 10px rgba(0,0,0,.1); }
     .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px rgba(93,163,214,.35), inset 0 0 0 4px rgba(255,255,255,.75); border-color:#5da3d6; }
 
-    /* Fill the whole oval: tile the provided narrow strip horizontally */
+    /* The swatch assets are thin vertical strips, so tile horizontally to fill the oval */
     .swatch .dot{
       width:100%; height:100%; border-radius:999px; display:block;
-      background-position:center;
-      background-repeat:repeat-x;   /* tile left-to-right */
-      background-size:auto 100%;    /* keep native width; full height */
+      background-position:center !important;
+      background-repeat:repeat-x !important;  /* tile left-to-right */
+      background-size: 10px 100% !important;  /* repeat every 10px; full height */
     }
 
     /* Reveal */
@@ -264,7 +264,7 @@
       ]
     };
 
-    // explicit SWATCH images (provided ovals)
+    /* Explicit SWATCH images (your ovals) */
     var SWATCH_OVALS={
       'black'     :'https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760786511/Screenshot_2025-10-18_142038_ludra7.png',
       'brown-kids':'https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760786510/Screenshot_2025-10-18_142027_th4glm.png',
