--- a/travel-hanging-bag.html
+++ b/travel-hanging-bag.html
@@ -23,19 +23,35 @@
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-  <!-- Page UI (gallery layout + animations) -->
+  <!-- Bathrobe header/logo replication + page UI -->
   <style>
-    @media (prefers-reduced-motion: reduce) {
-      * { animation: none !important; transition: none !important; }
-      html { scroll-behavior: auto; }
-    }
+    /* ===== Match Bathrobe header: pinned, black logo/title, same spacing ===== */
+    :root{ --logo-top:16px; --logo-left:22px; --burger-top:16px; --burger-right:22px; }
     html { scroll-behavior: smooth; }
+    @media (prefers-reduced-motion: reduce){ *{animation:none!important;transition:none!important} html{scroll-behavior:auto} }
 
-    #header .logo .symbol img { height: 28px; width: auto; }
-    #header .inner { padding: 1.5rem 0 0; }
-    #header.shrink .inner { padding-top: .5rem; }
-    #header.shrink .logo .symbol img { height: 22px; }
+    /* Pinned transparent header; logo + burger positioned like Bathrobe page */
+    #header{ position:fixed; top:0; left:0; right:0; background:transparent; border:0; box-shadow:none; margin:0!important; z-index:60; pointer-events:none; }
+    #header .inner{ padding-top:.45rem; padding-bottom:.15rem; pointer-events:auto; }
+    #header .logo{ position:fixed; top:var(--logo-top); left:var(--logo-left); z-index:61; pointer-events:auto; display:flex; align-items:center; gap:.5rem; }
+    #header nav{ position:fixed; top:var(--burger-top); right:var(--burger-right); z-index:61; pointer-events:auto; }
 
+    /* Black logo treatment identical to Bathrobe */
+    #header .logo .title{ letter-spacing:.18em; font-weight:600; color:#222!important; }
+    #header .logo .symbol img{ height:22px; width:auto; filter:none; }
+    #header nav a{ color:#222!important; }
+
+    /* Shrink behavior (same as Bathrobe) */
+    #header.shrink .inner{ padding-top:.25rem; }
+    #header.shrink .logo .symbol img{ height:21px; }
+
+    /* Reduce top whitespace to match Bathrobe page */
+    #wrapper{ padding-top:0!important; }
+    #main{ padding-top:0!important; }
+    #main .inner{ padding-top:72px!important; } /* space under pinned header */
+    .product-header{ margin-top:6px; }
+
+    /* ===== Page-specific gallery UI (kept from your original) ===== */
     .product-header.reveal h1 { margin-bottom: .4rem; }
     .product-header.reveal p  { color:#666; }
 
@@ -51,6 +67,7 @@
       position:absolute; inset:0; width:100%; height:100%; object-fit:cover;
       opacity:0; transform: scale(1.02);
       transition: opacity 380ms ease, transform 600ms cubic-bezier(.2,.6,.2,1);
+      background:#fff;
     }
     .main-image img.show { opacity:1; transform: scale(1.0); }
 
@@ -83,13 +100,16 @@
     #footer .inner { padding-top:2rem; padding-bottom:2rem; }
     #footer h2 { font-size:1rem; letter-spacing:.18em; color:#444; }
 
+    /* Prevent unwanted transforms on the header (same as Bathrobe) */
+    #header, #header *{ transform:none!important; }
+
     img { aspect-ratio:auto; }
   </style>
 </head>
 <body class="is-preload">
   <div id="wrapper">
 
-    <!-- Header -->
+    <!-- Header (pinned, black like Bathrobe) -->
     <header id="header">
       <div class="inner">
         <a href="index.html" class="logo">
@@ -233,7 +253,7 @@
       items.forEach(function (el){ io.observe(el); });
     })();
 
-    // Header shrink
+    // Header shrink (works with pinned header exactly like Bathrobe)
     (function () {
       var header = document.getElementById('header');
       var last = 0;
