--- a/bathrobe.html
+++ b/bathrobe.html
@@ -6,14 +6,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Bathrobe — ELIRA LIVING</title>
+  <title>Kenno Bathrobe — ELIRA LIVING</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
   <!-- SEO -->
-  <meta name="description" content="Plush, hotel-style bathrobe in multiple colors. Switch a color and browse its photo set." />
+  <meta name="description" content="Kenno bathrobe with chambray-trimmed finishes and belt. Recycled-blend textile (75% cotton, 25% polyester) with lively, soft texture. Sizes S/M, L/XL, XXL/XXXL." />
   <link rel="canonical" href="https://www.eliraliving.com/bathrobe.html" />
-  <meta property="og:title" content="Bathrobe — ELIRA LIVING" />
-  <meta property="og:description" content="Plush, hotel-style bathrobe in multiple colors. Cloud-soft, absorbent, and durable." />
+  <meta property="og:title" content="Kenno Bathrobe — ELIRA LIVING" />
+  <meta property="og:description" content="Refined comfort in recycled-blend fabric with chambray trim. Available in Black and Grey. Product code RK4KTM." />
   <meta property="og:url" content="https://www.eliraliving.com/bathrobe.html" />
   <meta property="og:image" content="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -67,7 +67,7 @@
 
     .details{ background:#fff; border-radius:16px; padding:20px 22px; box-shadow:0 8px 24px rgba(0,0,0,.06); }
     .details h2{ margin:0 0 .4rem; letter-spacing:.18em; }
-    .details p{ color:#666; margin:0 0 1rem; }
+    .details p{ color:#444; margin:0 0 1rem; }
     .meta{ display:flex; gap:12px; flex-wrap:wrap; color:#555; margin:.3rem 0 1rem; }
     .meta .chip{ background:#f2f6fb; padding:.25rem .6rem; border-radius:20px; font-size:.9rem; letter-spacing:.02em; border:1px solid #e0edf8; }
 
@@ -138,16 +138,16 @@
       <div class="inner">
 
         <header class="product-header reveal">
-          <h1>Bathrobe</h1>
-          <p>Switch colors below and browse the photos for each.</p>
+          <h1>Kenno Bathrobe</h1>
+          <p>Refined comfort in a recycled-blend fabric with chambray-trimmed finishes and coordinating belt.</p>
         </header>
 
-        <section class="product-layout reveal" aria-label="Bathrobe gallery">
+        <section class="product-layout reveal" aria-label="Kenno bathrobe gallery">
           <!-- LEFT -->
           <div>
             <div class="main-image">
               <div class="frame">
-                <img id="mainImage" src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" alt="Bathrobe — Dark Blue — View 1" class="show">
+                <img id="mainImage" src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" alt="Kenno Bathrobe — View 1" class="show">
               </div>
             </div>
             <div class="thumbs" id="thumbs" role="listbox" aria-label="Choose a view"></div>
@@ -155,25 +155,53 @@
 
           <!-- RIGHT -->
           <aside class="details" aria-live="polite">
-            <h2 id="styleTitle">Dark Blue — View 1</h2>
+            <h2 id="styleTitle">Kenno — View 1</h2>
 
             <div class="color-picker" role="radiogroup" aria-label="Choose color"></div>
 
             <div class="meta">
-              <span class="chip">Soft & absorbent</span>
-              <span class="chip">Unisex fit</span>
-              <span class="chip">Machine-washable</span>
+              <span class="chip">Recycled cotton-rich</span>
+              <span class="chip">Chambray trim & belt</span>
+              <span class="chip">Unisex, relaxed drape</span>
+              <span class="chip">Machine-wash 60&nbsp;°C</span>
             </div>
-            <p id="styleDesc">Cozy spa comfort with secure belt and deep pockets. Explore photos for each color.</p>
 
-            <div class="actions">
+            <!-- ==== YOUR DESCRIPTION (as provided) ==== -->
+            <article id="product-copy">
+              <h3>Discover Unrivalled Comfort</h3>
+              <p>Indulge in the elevated comfort of the Kenno bathrobe — exquisitely tailored with chambray-trimmed finishes and a coordinating belt, this robe elevates the everyday ritual of relaxation into a moment of refined luxury. The textile, woven from recycled fibers, presents a vibrant, softly textured surface that both looks and feels exceptional — a true statement of sophisticated comfort.</p>
+
+              <h3>Exceptional Fabric Composition</h3>
+              <p><strong>Recycled-blend fabric: 75% cotton, 25% polyester</strong> — combining sustainable innovation with plush softness and enduring performance.</p>
+
+              <h3>Impeccable Fit &amp; Dimensions</h3>
+              <p><strong>S/M</strong> – Length (shoulder to hem): 108 cm · Sleeve (neck to cuff): 65 cm · Chest width: 67 cm<br>
+                 <strong>L/XL</strong> – Length: 115 cm · Sleeve: 65 cm · Chest width: 76 cm<br>
+                 <strong>XXL/XXXL</strong> – Length: 130 cm · Sleeve: 76 cm · Chest width: 82 cm</p>
+              <p>Designed to drape and move with graceful ease, offering both presence and relaxation.</p>
+
+              <h3>Care Instructions &amp; Longevity</h3>
+              <p>Prior to first use, launder independently. Anticipate approximately 5% shrinkage — a hallmark of natural fabric behaviour. Reshape gently when still damp. Machine-wash on a gentle cycle at 60&nbsp;°C; iron at medium temperature. Avoid tumble drying and refrain from dry-cleaning — these steps preserve the robe’s integrity and texture.</p>
+
+              <h3>Style &amp; Spec Highlights</h3>
+              <ul>
+                <li><strong>Available colours:</strong> Black, Grey</li>
+                <li><strong>Sizes:</strong> S/M, L/XL, XXL/XXXL</li>
+                <li><strong>Pattern detail:</strong> Cell</li>
+                <li><strong>Material category:</strong> Recycled material</li>
+                <li><strong>Material specification:</strong> 75% Cotton, 25% Polyester</li>
+                <li><strong>Product code:</strong> RK4KTM</li>
+                <li><strong>Manufacturer:</strong> Relaxed</li>
+              </ul>
+
+              <h3>Why It Matters</h3>
+              <p>This bathrobe isn’t merely a garment—it’s a sanctuary in fabric form. The recycled cotton-rich construction delivers a sumptuous tactile experience, while the clean-cut design and premium detailing rival those of the finest spa and hotel houses. Whether you’re stepping out of the sauna, out of the shower, or simply into an evening of tranquility, this robe offers you the unmistakable feel of “luxury that lasts.”</p>
+            </article>
+
+            <div class="actions" style="margin-top:1rem">
               <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
             </div>
-
-            <hr />
-            <p><strong>Specs</strong><br>
-              Cotton-rich terry. Sizes S–XL. Loop for hanging; reinforced seams. Care: cold wash, gentle cycle.</p>
           </aside>
         </section>
 
@@ -238,29 +266,33 @@
     var FULL_TRANSFORM ='f_auto,q_auto,w_1200/';
     var THUMB_TRANSFORM='f_auto,q_auto,w_240/';
 
+    /* NOTE:
+       The gallery below still uses your existing Cloudinary assets.
+       If you only want to show Black and Grey later, replace/trim this list accordingly.
+    */
     var PRODUCT={
       colors:[
         { id:'dark-blue',  name:'Dark Blue',  hex:'#0e2b4a',
           publicIds:['v1760782022/Dark_Blue_1._mpj0zr.png','v1760782021/Dark_Blue_2._ptxyc4.png'],
-          captions:['Dark Blue — full view','Dark Blue — alternate angle'] },
+          captions:['Kenno — Dark Blue — full view','Kenno — Dark Blue — alternate angle'] },
         { id:'dark-brown', name:'Dark Brown', hex:'#4a2d1b',
           publicIds:['v1760782022/Dark_Brown_1._cepnap.png'],
-          captions:['Dark Brown — full view'] },
+          captions:['Kenno — Dark Brown — full view'] },
         { id:'brown',      name:'Brown',      hex:'#7a5633',
           publicIds:['v1760782023/Brown_1._kjvdqs.png','v1760782025/Brown_2._fwsws0.png'],
-          captions:['Brown — front','Brown — folded'] },
+          captions:['Kenno — Brown — front','Kenno — Brown — folded'] },
         { id:'brown-kids', name:'Brown (Kids)', hex:'#6a4b2e',
           publicIds:['v1760782029/Brown_Kid_s_Bathrobe_grupok.png'],
-          captions:['Brown (Kids) — front'] },
+          captions:['Kenno — Brown (Kids) — front'] },
         { id:'black',      name:'Black',      hex:'#222222',
           publicIds:['v1760782026/Black_1_pogmqf.png','v1760782027/Black_2_n9vshi.png'],
-          captions:['Black — full view','Black — alternate angle'] },
+          captions:['Kenno — Black — full view','Kenno — Black — alternate angle'] },
         { id:'beige',      name:'Beige',      hex:'#c7b8a1',
           publicIds:['v1760782029/Beige_1._ylffja.png','v1760782026/Beige_2._ri0sjc.png'],
-          captions:['Beige — front','Beige — detail'] },
+          captions:['Kenno — Beige — front','Kenno — Beige — detail'] },
         { id:'dark-green', name:'Dark Green', hex:'#2f6b4f',
           publicIds:['v1760782029/Dark_Green_1._xktrgu.png','v1760782028/Darh_Green_2._fs5mgj.png'],
-          captions:['Dark Green — front','Dark Green — alternate angle'] }
+          captions:['Kenno — Dark Green — front','Kenno — Dark Green — alternate angle'] }
       ]
     };
 
@@ -289,10 +321,9 @@
     var mainImg=document.getElementById('mainImage');
     var thumbsEl=document.getElementById('thumbs');
     var titleEl=document.getElementById('styleTitle');
-    var descEl=document.getElementById('styleDesc');
-    var colorPickerEl=document.querySelector('.color-picker');
 
     function renderColorPicker(){
+      var colorPickerEl=document.querySelector('.color-picker');
       colorPickerEl.innerHTML='';
       PRODUCT.colors.forEach(function(c,idx){
         var btn=document.createElement('button');
@@ -318,7 +349,7 @@
       });
     }
     function updateColorPickA11y(){
-      colorPickerEl.querySelectorAll('.swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===currentColorIndex ? 'true' : 'false'));
+      document.querySelectorAll('.color-picker .swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===currentColorIndex ? 'true' : 'false'));
     }
 
     function renderThumbs(color){
@@ -349,11 +380,10 @@
       if(requiresContain(pid)) mainImg.classList.add('contain'); else mainImg.classList.remove('contain');
 
       var preload=new Image();
-      preload.onload=function(){ mainImg.src=newSrc; mainImg.alt='Bathrobe — '+color.name+' — View '+(i+1); mainImg.classList.add('show'); };
+      preload.onload=function(){ mainImg.src=newSrc; mainImg.alt='Kenno Bathrobe — '+color.name+' — View '+(i+1); mainImg.classList.add('show'); };
       preload.src=newSrc;
 
-      titleEl.textContent=color.name+' — View '+(i+1);
-      descEl.textContent=(color.captions && color.captions[i]) ? color.captions[i] : ('Detail view — '+color.name);
+      titleEl.textContent='Kenno — '+color.name+' — View '+(i+1);
 
       document.querySelectorAll('.thumb').forEach(t=>t.setAttribute('aria-selected','false'));
       var active=document.querySelector('.thumb[data-index="'+(i+1)+'"]'); if(active) active.setAttribute('aria-selected','true');
