--- a/bathrobe.html
+++ b/bathrobe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
-  Bathrobe gallery with pinned header (black), reduced top space, and custom image ovals (filled)
+  Kenno bathrobe — refined spacing, typography, and sticky details panel
 -->
 <html lang="en">
 <head>
@@ -24,88 +24,144 @@
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
   <style>
-    /* ===== Pinned header (from index), but BLACK ===== */
-    :root{ --logo-top:16px; --logo-left:22px; --burger-top:16px; --burger-right:22px; }
-    html { scroll-behavior: smooth; }
+    /* ===== Design tokens (local) ===== */
+    :root{
+      --page-gutter: 22px;
+      --card-r: 16px;
+      --shadow-1: 0 6px 18px rgba(0,0,0,.07);
+      --shadow-2: 0 10px 30px rgba(0,0,0,.10);
+      --ink-900:#111; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
+      --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
+      --brand:#1d6fa7; --brand-100: rgba(29,111,167,.10);
+    }
+
+    html { scroll-behavior:smooth; }
     @media (prefers-reduced-motion: reduce){ *{animation:none!important;transition:none!important} html{scroll-behavior:auto} }
 
+    /* ===== Header (pinned, black text) ===== */
     #header{ position:fixed; top:0; left:0; right:0; background:transparent; border:0; box-shadow:none; margin:0!important; z-index:60; pointer-events:none; }
-    #header .inner{ padding-top:.45rem; padding-bottom:.15rem; pointer-events:auto; }
-    #header .logo{ position:fixed; top:var(--logo-top); left:var(--logo-left); z-index:61; pointer-events:auto; display:flex; align-items:center; gap:.5rem; }
-    #header nav{ position:fixed; top:var(--burger-top); right:var(--burger-right); z-index:61; pointer-events:auto; }
-    #header .logo .title{ letter-spacing:.18em; font-weight:600; color:#222!important; }
-    #header .logo .symbol img{ height:22px; width:auto; filter:none; }
-    #header nav a{ color:#222!important; }
+    #header .inner{ padding-top:.5rem; padding-bottom:.25rem; pointer-events:auto; }
+    #header .logo{ position:fixed; top:16px; left:22px; z-index:61; display:flex; align-items:center; gap:.55rem; }
+    #header .logo .symbol img{ height:22px; width:auto; }
+    #header .logo .title{ letter-spacing:.12em; font-weight:600; color:var(--ink-900)!important; }
+    #header nav{ position:fixed; top:16px; right:22px; z-index:61; }
+    #header nav a{ color:var(--ink-900)!important; }
     #header.shrink .inner{ padding-top:.25rem; }
-    #header.shrink .logo .symbol img{ height:21px; }
 
-    /* reduce top whitespace */
+    /* ===== Page rhythm ===== */
     #wrapper{ padding-top:0!important; }
     #main{ padding-top:0!important; }
-    #main .inner{ padding-top:72px!important; }
-    .product-header{ margin-top:6px; }
+    #main .inner{ padding-top:78px!important; }
 
-    /* ===== Product visuals ===== */
-    .product-header.reveal h1{ margin-bottom:.4rem; }
-    .product-header.reveal p{ color:#666; }
-
-    .product-layout{ display:grid; gap:28px; grid-template-columns:1.2fr 1fr; align-items:start; }
-    @media (max-width:980px){ .product-layout{ grid-template-columns:1fr; } }
-
-    .main-image{ background:#fff; border-radius:16px; overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,.08); }
-    .main-image .frame{ width:100%; aspect-ratio:1/1; background:#f5f5f5; position:relative; }
-    .main-image img{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:0; transform:scale(1.02); transition:opacity 380ms ease, transform 600ms cubic-bezier(.2,.6,.2,1); background:#fff; }
-    .main-image img.show{ opacity:1; transform:scale(1.0); }
-    .main-image img.contain{ object-fit:contain; }
-
-    .thumbs{ margin-top:12px; display:grid; gap:10px; grid-template-columns:repeat(6,1fr); }
-    @media (max-width:600px){ .thumbs{ grid-template-columns:repeat(5,1fr); } }
-    .thumb{ position:relative; border:2px solid transparent; border-radius:10px; overflow:hidden; background:#fff; cursor:pointer; transition:border-color 160ms ease, transform 160ms ease, box-shadow 160ms ease; box-shadow:0 3px 10px rgba(0,0,0,.06); }
-    .thumb:hover{ transform:translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.10); }
-    .thumb[aria-selected="true"]{ border-color:#5da3d6; }
-    .thumb img{ width:100%; height:100%; aspect-ratio:1/1; object-fit:cover; display:block; }
-
-    .details{ background:#fff; border-radius:16px; padding:20px 22px; box-shadow:0 8px 24px rgba(0,0,0,.06); }
-    .details h2{ margin:0 0 .4rem; letter-spacing:.18em; }
-    .details p{ color:#444; margin:0 0 1rem; }
-    .meta{ display:flex; gap:12px; flex-wrap:wrap; color:#555; margin:.3rem 0 1rem; }
-    .meta .chip{ background:#f2f6fb; padding:.25rem .6rem; border-radius:20px; font-size:.9rem; letter-spacing:.02em; border:1px solid #e0edf8; }
-
-    /* ===== OVAL COLOR SWATCHES (use your image ovals and force-fill) ===== */
-    .color-picker{ display:flex; gap:12px; align-items:center; margin:.6rem 0 1.2rem; flex-wrap:wrap; }
-    .swatch{
-      width:44px; height:28px; border-radius:999px; border:2px solid #cfcfcf; cursor:pointer; position:relative;
-      outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff;
-      box-shadow:inset 0 0 0 4px rgba(255,255,255,.75), 0 1px 2px rgba(0,0,0,.12);
-      transition: border-color .2s ease, box-shadow .2s ease, transform .2s ease;
+    /* ===== Product header: clearer hierarchy ===== */
+    .product-header{ margin-top:6px; margin-bottom:18px; }
+    .product-header h1{
+      margin:0 0 .25rem;
+      font-weight:700;
+      letter-spacing:.02em;
+      color:var(--ink-900);
+      line-height:1.2;
     }
-    .swatch:hover{ transform:translateY(-1px); box-shadow:0 3px 10px rgba(0,0,0,.1); }
-    .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px rgba(93,163,214,.35), inset 0 0 0 4px rgba(255,255,255,.75); border-color:#5da3d6; }
+    .product-header p{
+      margin:0;
+      color:var(--ink-500);
+      font-size:1.02rem;
+      line-height:1.6;
+    }
 
-    /* The swatch assets are thin vertical strips, so tile horizontally to fill the oval */
+    /* ===== Grid layout (more air + sticky details) ===== */
+    .product-layout{
+      display:grid; gap:36px; grid-template-columns: minmax(0,1.1fr) minmax(0,.9fr); align-items:start;
+    }
+    @media (max-width:1100px){ .product-layout{ grid-template-columns:1fr; gap:22px; } }
+
+    /* ===== Image card ===== */
+    .main-image{ background:#fff; border-radius:var(--card-r); overflow:hidden; box-shadow:var(--shadow-1); }
+    .main-image .frame{ width:100%; aspect-ratio: 4/5; background:var(--ui-200); position:relative; }
+    .main-image img{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:0; transform:scale(1.015); transition:opacity 360ms ease, transform 520ms cubic-bezier(.2,.6,.2,1); background:#fff; }
+    .main-image img.show{ opacity:1; transform:scale(1); }
+    .main-image img.contain{ object-fit:contain; background:#fff; }
+
+    /* Thumbnails: bigger, centered, tidy */
+    .thumbs{ margin-top:12px; display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
+    .thumb{
+      width:72px; height:72px; border:1px solid var(--ui-400); border-radius:12px; overflow:hidden; background:#fff;
+      cursor:pointer; transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+      box-shadow:0 3px 10px rgba(0,0,0,.05);
+    }
+    .thumb:hover{ transform:translateY(-2px); box-shadow:var(--shadow-1); }
+    .thumb[aria-selected="true"]{ border-color:var(--brand); box-shadow:0 0 0 3px var(--brand-100); }
+    .thumb img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+    /* ===== Details card: calmer typography + sticky ===== */
+    .details{
+      position:sticky; top:88px;
+      background:#fff; border-radius:var(--card-r); padding:24px 24px 26px;
+      box-shadow:var(--shadow-1);
+    }
+    .details h2{
+      margin:0 0 .35rem; font-weight:700; letter-spacing:.02em; color:var(--ink-900);
+      font-size:1.15rem; line-height:1.35;
+    }
+    .eyebrow{ margin-bottom:.75rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
+
+    .details p, .details li{ color:var(--ink-600); line-height:1.7; }
+    .details p{ margin:0 0 1rem; }
+    .details ul{ margin:.35rem 0 1.1rem 0; padding-left:0; list-style:none; }
+    .details ul li{ padding-left:1.1rem; position:relative; }
+    .details ul li::before{
+      content:""; width:7px; height:7px; border-radius:50%; background:var(--ink-400);
+      position:absolute; left:0; top:.63rem;
+    }
+
+    /* Section titles inside copy */
+    #product-copy h3{
+      margin:1.1rem 0 .4rem; font-size: .95rem; letter-spacing:.16em; text-transform:uppercase; color:var(--ink-700);
+    }
+    #product-copy p + h3{ margin-top:1.25rem; }
+
+    .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.35rem 0 1rem; }
+    .meta .chip{
+      background:#f6f9fc; padding:.28rem .55rem; border-radius:999px; font-size:.88rem; border:1px solid #e5eff8;
+      line-height:1.3; white-space:nowrap;
+    }
+
+    /* ===== OVAL COLOR SWATCHES (image-filled) ===== */
+    .color-picker{ display:flex; gap:12px; align-items:center; margin:.4rem 0 .9rem; flex-wrap:wrap; }
+    .swatch{
+      width:46px; height:28px; border-radius:999px; border:1px solid var(--ui-400); cursor:pointer; position:relative;
+      outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff;
+      box-shadow:inset 0 0 0 4px rgba(255,255,255,.8);
+      transition:border-color .2s ease, box-shadow .2s ease, transform .12s ease;
+    }
+    .swatch:hover{ transform:translateY(-1px); }
+    .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px var(--brand-100), inset 0 0 0 4px rgba(255,255,255,.8); border-color:var(--brand); }
     .swatch .dot{
       width:100%; height:100%; border-radius:999px; display:block;
-      background-position:center !important;
-      background-repeat:repeat-x !important;  /* tile left-to-right */
-      background-size: 10px 100% !important;  /* repeat every 10px; full height */
+      background-position:center!important; background-repeat:repeat-x!important; background-size:10px 100%!important;
     }
 
-    /* Reveal */
-    .reveal{ opacity:0; transform:translateY(18px); transition:opacity 700ms ease, transform 700ms ease; }
+    /* Reveal animation hooks */
+    .reveal{ opacity:0; transform:translateY(14px); transition:opacity 500ms ease, transform 500ms ease; }
     .reveal.appear{ opacity:1; transform:translateY(0); }
 
     /* Footer */
-    #footer{ background:#f7f7f7; }
+    #footer{ background:var(--ui-100); }
     #footer .inner{ padding-top:2rem; padding-bottom:2rem; }
-    #footer h2{ font-size:1rem; letter-spacing:.18em; color:#444; }
+    #footer h2{ font-size:1rem; letter-spacing:.16em; color:var(--ink-700); }
 
-    #header, #header *{ transform:none!important; }
+    /* Small screens: relax stickiness and paddings */
+    @media (max-width:1100px){
+      .details{ position:static; padding:20px 18px 22px; }
+      .thumb{ width:66px; height:66px; }
+      #main .inner{ padding-top:72px!important; }
+    }
   </style>
 </head>
 <body class="is-preload">
   <div id="wrapper">
 
-    <!-- Header (pinned, black) -->
+    <!-- Header -->
     <header id="header">
       <div class="inner">
         <a href="index.html" class="logo">
@@ -155,18 +211,18 @@
 
           <!-- RIGHT -->
           <aside class="details" aria-live="polite">
-            <h2 id="styleTitle">Kenno — View 1</h2>
+            <div class="eyebrow" id="styleTitle">KENNO — DARK BLUE — VIEW 1</div>
 
             <div class="color-picker" role="radiogroup" aria-label="Choose color"></div>
 
             <div class="meta">
               <span class="chip">Recycled cotton-rich</span>
-              <span class="chip">Chambray trim & belt</span>
+              <span class="chip">Chambray trim &amp; belt</span>
               <span class="chip">Unisex, relaxed drape</span>
               <span class="chip">Machine-wash 60&nbsp;°C</span>
             </div>
 
-            <!-- ==== YOUR DESCRIPTION (as provided) ==== -->
+            <!-- ==== Product copy (unchanged content) ==== -->
             <article id="product-copy">
               <h3>Discover Unrivalled Comfort</h3>
               <p>Indulge in the elevated comfort of the Kenno bathrobe — exquisitely tailored with chambray-trimmed finishes and a coordinating belt, this robe elevates the everyday ritual of relaxation into a moment of refined luxury. The textile, woven from recycled fibers, presents a vibrant, softly textured surface that both looks and feels exceptional — a true statement of sophisticated comfort.</p>
@@ -198,7 +254,7 @@
               <p>This bathrobe isn’t merely a garment—it’s a sanctuary in fabric form. The recycled cotton-rich construction delivers a sumptuous tactile experience, while the clean-cut design and premium detailing rival those of the finest spa and hotel houses. Whether you’re stepping out of the sauna, out of the shower, or simply into an evening of tranquility, this robe offers you the unmistakable feel of “luxury that lasts.”</p>
             </article>
 
-            <div class="actions" style="margin-top:1rem">
+            <div class="actions" style="margin-top:.8rem">
               <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
             </div>
@@ -266,10 +322,6 @@
     var FULL_TRANSFORM ='f_auto,q_auto,w_1200/';
     var THUMB_TRANSFORM='f_auto,q_auto,w_240/';
 
-    /* NOTE:
-       The gallery below still uses your existing Cloudinary assets.
-       If you only want to show Black and Grey later, replace/trim this list accordingly.
-    */
     var PRODUCT={
       colors:[
         { id:'dark-blue',  name:'Dark Blue',  hex:'#0e2b4a',
@@ -296,7 +348,6 @@
       ]
     };
 
-    /* Explicit SWATCH images (your ovals) */
     var SWATCH_OVALS={
       'black'     :'https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760786511/Screenshot_2025-10-18_142038_ludra7.png',
       'brown-kids':'https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760786510/Screenshot_2025-10-18_142027_th4glm.png',
@@ -310,20 +361,19 @@
     function fullUrl(id){ return CLOUDINARY_BASE+FULL_TRANSFORM+id; }
     function thumbUrl(id){ return CLOUDINARY_BASE+THUMB_TRANSFORM+id; }
 
-    // Images that should display full-fit in the main viewer
     var NEED_CONTAIN=[
       'Beige_1._ylffja.png','Dark_Green_1._xktrgu.png','Brown_Kid_s_Bathrobe_grupok.png',
       'Black_1_pogmqf.png','Brown_1._kjvdqs.png','Dark_Blue_1._mpj0zr.png','Dark_Brown_1._cepnap.png'
     ];
     function requiresContain(publicId){ var name=publicId.split('/').pop(); return NEED_CONTAIN.indexOf(name)!==-1; }
 
-    var currentColorIndex=0,currentImageIndex=0;
+    var currentColorIndex=1/* start at dark-brown for your screenshot look */, currentImageIndex=0;
     var mainImg=document.getElementById('mainImage');
     var thumbsEl=document.getElementById('thumbs');
     var titleEl=document.getElementById('styleTitle');
+    var colorPickerEl=document.querySelector('.color-picker');
 
     function renderColorPicker(){
-      var colorPickerEl=document.querySelector('.color-picker');
       colorPickerEl.innerHTML='';
       PRODUCT.colors.forEach(function(c,idx){
         var btn=document.createElement('button');
@@ -337,7 +387,7 @@
         dot.className='dot';
         var ovalUrl = SWATCH_OVALS[c.id];
         if(ovalUrl){ dot.style.backgroundImage='url('+ovalUrl+')'; }
-        dot.style.backgroundColor=c.hex; // fallback while loading
+        dot.style.backgroundColor=c.hex; // fallback
         dot.title=c.name;
         btn.appendChild(dot);
 
@@ -349,7 +399,7 @@
       });
     }
     function updateColorPickA11y(){
-      document.querySelectorAll('.color-picker .swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===currentColorIndex ? 'true' : 'false'));
+      colorPickerEl.querySelectorAll('.swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===currentColorIndex ? 'true' : 'false'));
     }
 
     function renderThumbs(color){
@@ -383,7 +433,7 @@
       preload.onload=function(){ mainImg.src=newSrc; mainImg.alt='Kenno Bathrobe — '+color.name+' — View '+(i+1); mainImg.classList.add('show'); };
       preload.src=newSrc;
 
-      titleEl.textContent='Kenno — '+color.name+' — View '+(i+1);
+      titleEl.textContent=('KENNO — '+color.name+' — VIEW '+(i+1)).toUpperCase();
 
       document.querySelectorAll('.thumb').forEach(t=>t.setAttribute('aria-selected','false'));
       var active=document.querySelector('.thumb[data-index="'+(i+1)+'"]'); if(active) active.setAttribute('aria-selected','true');
