--- a/bathrobe.html
+++ b/bathrobe.html
@@ -203,7 +203,7 @@
           <div>
             <div class="main-image">
               <div class="frame">
-                <img id="mainImage" src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" alt="Kenno Bathrobe — View 1" class="show">
+                <img id="mainImage" src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" alt="Kenno Bathrobe" class="show">
               </div>
             </div>
             <div class="thumbs" id="thumbs" role="listbox" aria-label="Choose a view"></div>
