--- a/bathrobe.html
+++ b/bathrobe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
-  Kenno bathrobe — refined spacing, typography, and sticky details panel
+  Kenno bathrobe — refined layout, elevated typography, and top-placed actions
 -->
 <html lang="en">
 <head>
@@ -30,9 +30,9 @@
       --card-r: 16px;
       --shadow-1: 0 6px 18px rgba(0,0,0,.07);
       --shadow-2: 0 10px 30px rgba(0,0,0,.10);
-      --ink-900:#111; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
-      --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
-      --brand:#1d6fa7; --brand-100: rgba(29,111,167,.10);
+      --ink-900:#111; --ink-800:#1c1c1c; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
+      --ui-050:#fcfcfc; --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
+      --brand:#1d6fa7; --brand-100: rgba(29,111,167,.12);
     }
 
     html { scroll-behavior:smooth; }
@@ -53,7 +53,7 @@
     #main{ padding-top:0!important; }
     #main .inner{ padding-top:78px!important; }
 
-    /* ===== Product header: clearer hierarchy ===== */
+    /* ===== Product header ===== */
     .product-header{ margin-top:6px; margin-bottom:18px; }
     .product-header h1{
       margin:0 0 .25rem;
@@ -69,7 +69,7 @@
       line-height:1.6;
     }
 
-    /* ===== Grid layout (more air + sticky details) ===== */
+    /* ===== Grid layout (sticky details) ===== */
     .product-layout{
       display:grid; gap:36px; grid-template-columns: minmax(0,1.1fr) minmax(0,.9fr); align-items:start;
     }
@@ -82,7 +82,7 @@
     .main-image img.show{ opacity:1; transform:scale(1); }
     .main-image img.contain{ object-fit:contain; background:#fff; }
 
-    /* Thumbnails: bigger, centered, tidy */
+    /* Thumbnails */
     .thumbs{ margin-top:12px; display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
     .thumb{
       width:72px; height:72px; border:1px solid var(--ui-400); border-radius:12px; overflow:hidden; background:#fff;
@@ -93,19 +93,29 @@
     .thumb[aria-selected="true"]{ border-color:var(--brand); box-shadow:0 0 0 3px var(--brand-100); }
     .thumb img{ width:100%; height:100%; object-fit:cover; display:block; }
 
-    /* ===== Details card: calmer typography + sticky ===== */
+    /* ===== Details card ===== */
     .details{
       position:sticky; top:88px;
       background:#fff; border-radius:var(--card-r); padding:24px 24px 26px;
       box-shadow:var(--shadow-1);
     }
-    .details h2{
-      margin:0 0 .35rem; font-weight:700; letter-spacing:.02em; color:var(--ink-900);
-      font-size:1.15rem; line-height:1.35;
-    }
-    .eyebrow{ margin-bottom:.75rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
+    .eyebrow{ margin:0 0 .65rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
 
-    .details p, .details li{ color:var(--ink-600); line-height:1.7; }
+    /* TOP actions (moved above content) */
+    .actions-top{
+      display:flex; gap:10px; flex-wrap:wrap; margin:0 0 14px;
+    }
+    .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
+    .actions-top .button{ padding:.6rem .9rem; }
+
+    .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.2rem 0 1rem; }
+    .meta .chip{
+      background:#f6f9fc; padding:.28rem .55rem; border-radius:999px; font-size:.88rem; border:1px solid #e5eff8;
+      line-height:1.3; white-space:nowrap;
+    }
+
+    /* Editorial body */
+    .details p, .details li{ color:var(--ink-600); line-height:1.75; hyphens:auto; }
     .details p{ margin:0 0 1rem; }
     .details ul{ margin:.35rem 0 1.1rem 0; padding-left:0; list-style:none; }
     .details ul li{ padding-left:1.1rem; position:relative; }
@@ -116,18 +126,14 @@
 
     /* Section titles inside copy */
     #product-copy h3{
-      margin:1.1rem 0 .4rem; font-size: .95rem; letter-spacing:.16em; text-transform:uppercase; color:var(--ink-700);
+      margin:1.1rem 0 .35rem;
+      font-size:.95rem; letter-spacing:.16em; text-transform:uppercase;
+      color:var(--ink-700); font-variant-caps:all-small-caps;
     }
     #product-copy p + h3{ margin-top:1.25rem; }
 
-    .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.35rem 0 1rem; }
-    .meta .chip{
-      background:#f6f9fc; padding:.28rem .55rem; border-radius:999px; font-size:.88rem; border:1px solid #e5eff8;
-      line-height:1.3; white-space:nowrap;
-    }
-
-    /* ===== OVAL COLOR SWATCHES (image-filled) ===== */
-    .color-picker{ display:flex; gap:12px; align-items:center; margin:.4rem 0 .9rem; flex-wrap:wrap; }
+    /* Swatches */
+    .color-picker{ display:flex; gap:12px; align-items:center; margin:.25rem 0 .8rem; flex-wrap:wrap; }
     .swatch{
       width:46px; height:28px; border-radius:999px; border:1px solid var(--ui-400); cursor:pointer; position:relative;
       outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff;
@@ -150,7 +156,7 @@
     #footer .inner{ padding-top:2rem; padding-bottom:2rem; }
     #footer h2{ font-size:1rem; letter-spacing:.16em; color:var(--ink-700); }
 
-    /* Small screens: relax stickiness and paddings */
+    /* Small screens */
     @media (max-width:1100px){
       .details{ position:static; padding:20px 18px 22px; }
       .thumb{ width:66px; height:66px; }
@@ -195,7 +201,7 @@
 
         <header class="product-header reveal">
           <h1>Kenno Bathrobe</h1>
-          <p>Refined comfort in a recycled-blend fabric with chambray-trimmed finishes and coordinating belt.</p>
+          <p>Refined comfort in a recycled-blend fabric with chambray-trimmed finishes and a coordinating belt.</p>
         </header>
 
         <section class="product-layout reveal" aria-label="Kenno bathrobe gallery">
@@ -213,6 +219,13 @@
           <aside class="details" aria-live="polite">
             <div class="eyebrow" id="styleTitle">KENNO — DARK BLUE — VIEW 1</div>
 
+            <!-- TOP ACTIONS (moved here) -->
+            <div class="actions-top">
+              <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
+              <a href="index.html#products" class="button">Back to Products</a>
+            </div>
+
+            <!-- Swatches + feature chips -->
             <div class="color-picker" role="radiogroup" aria-label="Choose color"></div>
 
             <div class="meta">
@@ -222,42 +235,37 @@
               <span class="chip">Machine-wash 60&nbsp;°C</span>
             </div>
 
-            <!-- ==== Product copy (unchanged content) ==== -->
+            <!-- ==== Product copy (elevated + formal; facts unchanged) ==== -->
             <article id="product-copy">
               <h3>Discover Unrivalled Comfort</h3>
-              <p>Indulge in the elevated comfort of the Kenno bathrobe — exquisitely tailored with chambray-trimmed finishes and a coordinating belt, this robe elevates the everyday ritual of relaxation into a moment of refined luxury. The textile, woven from recycled fibers, presents a vibrant, softly textured surface that both looks and feels exceptional — a true statement of sophisticated comfort.</p>
+              <p>The Kenno bathrobe refines everyday ease into a considered ritual. Chambray-trimmed edges and a coordinating belt frame a silhouette that feels composed yet effortless. Woven from recycled fibres, the surface reads lively and tactile—soft to the touch and quietly luxurious.</p>
 
-              <h3>Exceptional Fabric Composition</h3>
-              <p><strong>Recycled-blend fabric: 75% cotton, 25% polyester</strong> — combining sustainable innovation with plush softness and enduring performance.</p>
+              <h3>Composition</h3>
+              <p><strong>75% cotton, 25% polyester</strong> (recycled-blend). A responsible fabric that balances plush handfeel with lasting performance.</p>
 
-              <h3>Impeccable Fit &amp; Dimensions</h3>
-              <p><strong>S/M</strong> – Length (shoulder to hem): 108 cm · Sleeve (neck to cuff): 65 cm · Chest width: 67 cm<br>
-                 <strong>L/XL</strong> – Length: 115 cm · Sleeve: 65 cm · Chest width: 76 cm<br>
-                 <strong>XXL/XXXL</strong> – Length: 130 cm · Sleeve: 76 cm · Chest width: 82 cm</p>
-              <p>Designed to drape and move with graceful ease, offering both presence and relaxation.</p>
+              <h3>Fit &amp; Measurements</h3>
+              <p><strong>S/M</strong> — Length (shoulder to hem) 108 cm · Sleeve (neck to cuff) 65 cm · Chest 67 cm<br>
+                 <strong>L/XL</strong> — Length 115 cm · Sleeve 65 cm · Chest 76 cm<br>
+                 <strong>XXL/XXXL</strong> — Length 130 cm · Sleeve 76 cm · Chest 82 cm</p>
+              <p>Drapes with poised ease for a presence that reads relaxed, never bulky.</p>
 
-              <h3>Care Instructions &amp; Longevity</h3>
-              <p>Prior to first use, launder independently. Anticipate approximately 5% shrinkage — a hallmark of natural fabric behaviour. Reshape gently when still damp. Machine-wash on a gentle cycle at 60&nbsp;°C; iron at medium temperature. Avoid tumble drying and refrain from dry-cleaning — these steps preserve the robe’s integrity and texture.</p>
+              <h3>Care &amp; Longevity</h3>
+              <p>Launder separately before first wear. Natural shrinkage approx. <strong>5%</strong>. Reshape while damp. Machine-wash gentle at <strong>60&nbsp;°C</strong>; iron on medium. Avoid tumble drying and dry-cleaning to preserve structure and texture.</p>
 
-              <h3>Style &amp; Spec Highlights</h3>
+              <h3>At-a-Glance</h3>
               <ul>
-                <li><strong>Available colours:</strong> Black, Grey</li>
+                <li><strong>Colours:</strong> Black, Grey</li>
                 <li><strong>Sizes:</strong> S/M, L/XL, XXL/XXXL</li>
-                <li><strong>Pattern detail:</strong> Cell</li>
+                <li><strong>Pattern:</strong> Cell</li>
                 <li><strong>Material category:</strong> Recycled material</li>
-                <li><strong>Material specification:</strong> 75% Cotton, 25% Polyester</li>
+                <li><strong>Specification:</strong> 75% Cotton, 25% Polyester</li>
                 <li><strong>Product code:</strong> RK4KTM</li>
                 <li><strong>Manufacturer:</strong> Relaxed</li>
               </ul>
 
               <h3>Why It Matters</h3>
-              <p>This bathrobe isn’t merely a garment—it’s a sanctuary in fabric form. The recycled cotton-rich construction delivers a sumptuous tactile experience, while the clean-cut design and premium detailing rival those of the finest spa and hotel houses. Whether you’re stepping out of the sauna, out of the shower, or simply into an evening of tranquility, this robe offers you the unmistakable feel of “luxury that lasts.”</p>
+              <p>More than loungewear, Kenno is a small sanctuary. The cotton-rich, recycled construction invites daily use; the clean lines and tailored details echo the quiet polish of fine spa robes. From sauna to slow evenings, it delivers an enduring sense of “luxury that lasts.”</p>
             </article>
-
-            <div class="actions" style="margin-top:.8rem">
-              <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
-              <a href="index.html#products" class="button">Back to Products</a>
-            </div>
           </aside>
         </section>
 
@@ -367,7 +375,7 @@
     ];
     function requiresContain(publicId){ var name=publicId.split('/').pop(); return NEED_CONTAIN.indexOf(name)!==-1; }
 
-    var currentColorIndex=1/* start at dark-brown for your screenshot look */, currentImageIndex=0;
+    var currentColorIndex=1, currentImageIndex=0;
     var mainImg=document.getElementById('mainImage');
     var thumbsEl=document.getElementById('thumbs');
     var titleEl=document.getElementById('styleTitle');
