--- a/bathrobe.html
+++ b/bathrobe.html
@@ -2,7 +2,7 @@
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
   Kenno bathrobe — refined layout, elevated typography, top-placed actions,
-  centered buttons, larger subheads, and scroll-linked CTA motion.
+  centered buttons, larger subheads, and scroll-linked CTA motion (full drop).
 -->
 <html lang="en">
 <head>
@@ -34,7 +34,7 @@
       --ink-900:#111; --ink-800:#1c1c1c; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
       --ui-050:#fcfcfc; --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
       --brand:#1d6fa7; --brand-100: rgba(29,111,167,.12);
-      --cta-shift: 0px; /* for scroll-linked motion */
+      --cta-shift: 0px; /* updated by JS for scroll-linked CTA motion */
     }
 
     html { scroll-behavior:smooth; }
@@ -482,15 +482,15 @@
       if(e.key==='ArrowDown'){ currentColorIndex=(currentColorIndex+1)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
     });
 
-    /* --- Scroll-linked shift for the Add to cart row --- */
+    /* --- Scroll-linked shift for the Add to cart row (full drop) --- */
     (function(){
       var root = document.documentElement;
-      var maxShift = 16;   // max downward shift in px
-      var range    = 120;  // scroll distance to reach max
+      var maxShift = 48;   // total downward shift in px (full drop)
+      var range    = 48;   // scroll distance to reach max (1:1 feel)
 
       function updateCTA(){
         var y = window.scrollY || window.pageYOffset || 0;
-        var shift = Math.min(y, range) / range * maxShift;
+        var shift = Math.min(y, range); // 1px scroll -> 1px shift, capped at maxShift
         root.style.setProperty('--cta-shift', shift.toFixed(2) + 'px');
       }
 
